# QtNoid2

./: .gitignore  BUILD-INSTRUCTIONS.md  CLOC-REPORT.md  CLOC-Report.bat  CLOC-Report.txt  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  ReleaseNotes.txt
App/: QtNoidApp.md
App/include/QtNoidApp/: global.h  settings.h
Common/: CMakeLists.txt  QtNoidCommon.md
Common/include/QtNoidCommon/: QtNoidCommon  file.h  scale.h  text.h
Common/src/: file.cpp  scale.cpp  text.cpp
Common/tests/: CMakeLists.txt  test_file.cpp  test_scale.cpp  test_text.cpp
Core/: CMakeLists.txt  QtNoidCore.md
Core/cmake/: QtNoidCoreConfig.cmake.in  QtNoidCoreVersion.h.in
Core/include/QtNoidCore/: core.h  global.h
Core/src/: core.cpp
Core/tests/: CMakeLists.txt  test_core.cpp
Examples/: CMakeLists.txt
Examples/AppBasicUsage/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/AppBasicUsage/AppBasicUsage/: CMakeLists.txt  mainwindow.cpp
Examples/AppParameterBasicUsage/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/AppParameterListBasicUsage/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/AppParameterListBenchmark/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/AppParameterListUsage/: CMakeLists.txt  main.cpp
Examples/AppSettingsBasicUsage/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/BasicUsage/: CMakeLists.txt  mainwindow.cpp
Examples/CommonBasicUsage/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Examples/CoreBasicUsage/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Examples/JsonTxt2JsonBasicUsage/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/YAMLtoJsonTestSuite/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtNoidApp/: CMakeLists.txt  QtNoidApp.md  QtNoidApp.md.autosave
QtNoidApp/doc/: AppParameterBasicUsage.md  AppParameterListBasicUsage.md  AppParameterListBenchmark.md  AppSettingsBasicUsage.md  doc.qrc
QtNoidApp/include/QtNoidApp/: QtNoidApp  parameter.h  parameterlist.h  settings.h
QtNoidApp/src/: parameter.cpp  parameterlist.cpp  settings.cpp
QtNoidApp/tests/: CMakeLists.txt  test_parameter.cpp  test_parameterlist.cpp  test_settings.cpp
QtNoidCommon/: CMakeLists.txt  QtNoidCommon.md
QtNoidCommon/include/QtNoidCommon/: QtNoidCommon  global.h
QtNoidCommon/src/: file.cpp  text.cpp
QtNoidCommon/tests/: CMakeLists.txt  test_file.cpp  test_scale.cpp  test_text.cpp
QtNoidCore/: CMakeLists.txt  QtNoidCore.md
QtNoidCore/include/QtNoidCore/: QtNoidCore
QtNoidCore/src/: core.cpp
QtNoidCore/tests/: test_core.cpp
QtNoidJson/: CMakeLists.txt  QtNoidJson.md
QtNoidJson/cmake/: QtNoidJsonConfig.cmake.in
QtNoidJson/include/QtNoidJson/: QtNoidJson  global.h  txt2json.h
QtNoidJson/src/: txt2json copy.cpp  txt2json.cpp
QtNoidJson/tests/: CMakeLists.txt  test_json.cpp  test_txt2json.cpp
Releases/QtNoid_2_0_0_Win_Qt_6_9_0_llvm_mingw_64_bit/: QtNoid2-2.0.0.7z
Releases/QtNoid_2_0_1_Win_Qt_6_9_1_llvm_mingw_64_bit/: QtNoid2-2.0.1-Win.7z
Releases/QtNoid_2_1_0_Win_Qt_6_9_2_llvm_mingw_64_bit/: QtNoid2-2.1.0-Win.7z
Releases/QtNoid_2_1_0_macOS_Qt_6_9_2_64_bit/: QtNoid2-2.1.0-macOS.7z
UserStories/: QtNoid2.odp  QtNoidApp_UserStories.odp  QtNoidCommon_UserStories.odp  QtNoidCore_UserStories.odp
