cmake_minimum_required(VERSION 3.20)


add_subdirectory(CoreBasicUsage)
add_subdirectory(CommonBasicUsage)
add_subdirectory(AppSettingsBasicUsage)
add_subdirectory(AppParameterBasicUsage)
add_subdirectory(AppParameterListBasicUsage)
add_subdirectory(AppParameterListBenchmark)
add_subdirectory(JsonTxt2JsonBasicUsage)

